--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,4 +2,4 @@ rootProject.name = 'LouShop'
 
 include ':app'
 
-apply from: new File(["node", "--print", "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim(), "../react.gradle")
+//apply from: new File(["node", "--print", "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim(), "../react.gradle")
