--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "LouShop",
   "version": "0.0.1",
   "private": true,
- "scripts": {
+  "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -10,19 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native/gradle-plugin": "^0.79.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-gradle-plugin": "^0.71.19",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0"
   },
   "devDependencies": {
-     "@react-native-community/cli": "latest",
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "latest",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
