Added screenshots and made bug fixes

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,6 @@
-rootProject.name = 'LouShop'
-
+pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin") }
+plugins { id("com.facebook.react.settings") }
+extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
+rootProject.name = 'AwesomeProject'
 include ':app'
-
-//apply from: new File(["node", "--print", "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim(), "../react.gradle")
+includeBuild('../node_modules/@react-native/gradle-plugin')
